I think thats probably all I can do today, although maybe ill come back later

--- a/AI/Final.ipynb
+++ b/AI/Final.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:64a0947a6f46013b85d1c2e21ea98c738dc11ca721485e177673a137dc858dc7"
+  "signature": "sha256:2e9caf52aecc3070636d9619ecc0092e64b7ef02d1af5da556deb7c55d8dee9b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -544,9 +544,165 @@
       "}\n",
       "```\n",
       "\n",
-      "One thing that I would like to point out is that the reason we are subtracting layers[0] from the loop is because 2X2X1 is actually composed of two inputs, two hidden neurons, and one neuron and therefore only needs three neurons.\n",
+      "One thing that I would like to point out is that the reason we are subtracting layers[0] from the loop is because 2X2X1 architecture is actually composed of two inputs, two hidden neurons, and one neuron and therefore only needs three neurons.\n",
       "\n",
       "Obviously, this was an ugly hack. But it gets the job done, and because I really wanted to finish the project, this was the way I left it.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<u>Backpropagation</u>\n",
+      "\n",
+      "Now comes the algorithm that makes an artificial Neural network actually function. The question is that with a single perceptron, it is fairly easy to change the weights so that you get the correct behavior. Let's walk through a simple example, and really spell out exactly how we change the weights. for example let's walk through how we would change the wweights for an OR neuron. Let's assume that in the beginning all the theta is set to zero, , i.e., omega = (0,0,0) (we will see shortly that random weights give the best performance). We will also allow our algorithm, on each mistake we will set a learning rate of three, to help make the example really clear. Reiterating, we only make changes to the weights when the error is equal or more than one-half. (on the real algorithm, I change the weights no matter how small the error). to spread the integer three amonst the various weights to give back a good performance. A simple example will help explain this. First, we put in the combination (0,0) expecting zero to come out. With all the weights set to zero, i.e., omega = (0,0,0), the sigmoid function returns one-half. The only possible weight that can be changed is the weight leading from the bias unit, and we must lower the connection, so we use all three weights it to negative three: (-3,0,0). If we were to run the activation again, now the sigmoid function would receive a value of negative one and therefore would output a value closer to zero as we expected. Now imagine we give it the combination (1,0) expecting a one to come out. Unfoortunately the sigmoid function would give the same result as previously, with an answer close to zero. Thus we would change the weights in the positive diurection, for the sake of argument, let say omega = (0,3,0), and now it would output a value above one half, much as we require. Then we give the perceptron the combination (0,1), it again fires a value at one-half, re-shuffling the weights we would expect to get something like (3,3,3). Finally, we check the last combination (1,1) and it outputs close to one, so we accept this and don't change the weights. Finally we come back around to the beginning, with omega equal to (3,3,3) we get an error, and therefore change omega to (0, 3, 3). All the other combinations pass. Doing a further round, we would get (0, 6, 3). One more round would give (0, 6, 6) and finally one last round would give (-3, 6, 6). Which is the stable result from this algorithm. \n",
+      "\n",
+      "This is all well and good, and this is the way we would train a single perceptron. A couple things that I would like to point out. We saw that everytime we had an error, we changed the weights by a factor of three. This factor is obviously set by the programmer and is called the learning rate. A small learning rate means that the algorithm will take a long time to get to suitable weights, however it will get there eventually. A large learning rate means that sometimes you are not even able to converge upon a sloution, however, if you are able to converge upon a solution, then it will happen rapidly. I have found that adjusting the learning rate can alter the algorithm dramatically.\n",
+      "\n",
+      "Another thing is that we did what is called batch learning. What we could have done, and which is what I tried to do in the first place, was to get one example, say (0,0) and learn it really, really well before moving on to the next example. If you were to use this type of learning instead you will quickly find that the neuron becomes extremely forgetfull and will usually forget what it learned previously very fast. If however, you use the method above, and feed it all examples at the same time, and change the weights only slightly between different examples, the results will be better, and the perceptron should in theory be able to learn all linear functions.\n",
+      "\n",
+      "Finally, as I mentioned, the procedure written above is basically a toy procedure, and the real algorithm changes the weights no matter how small the error.\n",
+      "\n",
+      "And also, the weights are all set to zero. On a real network doing this can often cause the algorithm not to learn anything at all, for reasoins that are not completely clear to me at the present.\n",
+      "\n",
+      "Now that we know how to train a single neuron, you might think that it would be easy to train a whole network. But if you spend anytime thinking about it at all, you quickly realize, that while it is easy to train the neurons that are cat the output level, where you actually know what the error is, i.e., what should the output be minus what was the output actually is. It is far from obvious what the error is going to be like on the hidden perceptrons. Basically, how do we assign blame in the hidden layers? In fact, many people thought about this for several decades without coming to a conclusion. \n",
+      "\n",
+      "\n",
+      "Finally, in the mid 1970s, Paul J. Werbos hit upon the idea of using directed partial derivatives to assign blame. For the output layers we assign blame much as we would expect, except that we use calculus:\n",
+      "\n",
+      "$$\\delta = (t_j-a_j)*a_j*(1 - a_j)$$\n",
+      "\n",
+      "where $t_j$ is the target. What maybe you can see, and is certainly easy to verify, is that weights that are undecided, i.e. have there weights close to zero, which means that the activation through the sigmoid function will be close to 1/2 will have the biggest errors. And weights that are either really positive or really negative will through the sigmoid function give activations that are either close to zero or close to one and will therefore (plug one into the above formula to see) not have much error attached to it. This means that weights that are undecided change most rapidly with this scheme, and that weights that are already either positive or negative will be difficult to move in either direction.\n",
+      "\n",
+      "While the derivation of the mathematics is outside the scope of this paper, the result is fairly simple. We assign blame, simply by asking how much was the error at the previous layer and multiplying that by the weight of the contribution. Also, because this derivation comes from calculus (and because if you think about it, we are talking about the gradient of the activation) we must also multiply it by the gradiant of the activation. Here's the final equation of how to measure the error:\n",
+      "\n",
+      "$$\\delta_j = a_j(1 - a_j) \\sum_k \\delta_k \\omega_{kj}$$\n",
+      "\n",
+      "\n",
+      "\t    //\\omega_{ij} <-- \\omega_{ij} + \\eta \\delta_j a_i\n",
+      "\t    \n",
+      "\t    //where here a_i is the activation from the future\n",
+      "\t    //and eta is the learning rate, to be adjusted later"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "After we know exactly who contributed what error, it is straightforward to change the weights accordingly. But obviously since I was the one that implemented this algorithm, this is not the way it happened in practice. In my true algortihm, because it really makes the most amount of sense, is that as soon as I discovered an error, I would then go ahead and then change the weights. This seemed appropriate from a programming perspective, because it means that I did not need to have two loops. (one to discover the errors, and another to correct the weights). However, I think mathematically this is a little fishy, but in practice does not seem to cause much harm.\n",
+      "\n",
+      "Before showing off the code that implemented this backpropagation algorithm, I want to briefly mention that my design decision to limit the architecture to simple chains of the for 2X2X...X2X1 really paid off in this algorithm beacuse I only had three cases to consider. The absolute last output layer, the layer that came right before the output layer, and all the other layers. This made my life much simpler. Without further ado:\n",
+      "\n",
+      "```\n",
+      "void train(char a, char b, char c, char out, net *x, int epochs){\n",
+      "\n",
+      "  double RATE = 0.5; //learning rate\n",
+      "\n",
+      "  double storage[x->size - 2][BYTE]; //activation storage, for later calculation\n",
+      "\n",
+      "  double input_storage[x->size -2][SIZE]; //input storage, from layer to layer\n",
+      "\n",
+      "  a = a|128; //usual bitmasking\n",
+      "\n",
+      "  double *input = make_input(a,b,c); \n",
+      "  //here I call an outside function, that turns the three characters\n",
+      "  //into a vector of 24 numbers\n",
+      "\n",
+      "  //first we feed forward \n",
+      "  int i,n;\n",
+      "  for(i = 0 ; i < x->length - 2;i++){\n",
+      "\n",
+      "\tchar b_new = activate_neuron(a,b,c,x->theta[2*i].t);\n",
+      "\tc = activate_neuron(a,b,c,x->theta[2*i+1].t);\n",
+      "\tb = b_new;\n",
+      "\n",
+      "\tfor(n=0; n<BYTE; n++){\n",
+      "\t  storage[2*i][n] = sigmoid(dot(input,x->theta[2*i].t[n]));;\n",
+      "\t  storage[2*i+1][n] = sigmoid(dot(input, x->theta[2*i+1].t[n]));\n",
+      "\t}\n",
+      "\tinput = make_input(a,b,c);\n",
+      "\tfor(n =0 ; n<SIZE; n++){\n",
+      "\t  input_storage[i][n] = input[n];\n",
+      "\t}\n",
+      "  }\n",
+      "  //our final output layer\n",
+      "  for(n=0; n<BYTE; n++){\n",
+      "\tstorage[x->size-3][n] =  sigmoid(dot(input, x->theta[x->size -3].t[n]));\n",
+      "  }\n",
+      "\n",
+      "\n",
+      "  //Now we go backwards\n",
+      "  for(n = 0; n< epochs ; n++){\n",
+      "\t\n",
+      "    //here we set up two temporary error arrays\n",
+      "    double error1[BYTE];\n",
+      "    double error2[BYTE];\n",
+      "\n",
+      "    for(i=0; i<BYTE; i++){\n",
+      "      //first the output layer\n",
+      "\t  \n",
+      "      error1[i] = (!!((out << i) & 128) - storage[x->size-3][i])*(storage[x->size-3][i])*(1-storage[x->size-3][i]);\n",
+      "\t  error2[i] = 0;\n",
+      "\n",
+      "      int j_here;\n",
+      "\t  for(j_here = 0 ; j_here <SIZE ; j_here++){\n",
+      "        //now we change the weights  \n",
+      "\t    x->theta[x->size -3].t[i][j_here] += RATE*error1[i]*input_storage[x->length - 3][j_here];\n",
+      "\t  }\n",
+      "    }\n",
+      "    \n",
+      "\tint j;\n",
+      "    for(j =  x->length - 2; j>0; j--){\n",
+      "\t  if(x->layers[j+1] == 1){\n",
+      "        //for the layer right before the output layer\n",
+      "        \n",
+      "\t    int m;\n",
+      "\t    for(m = 0; m<BYTE; m++){\n",
+      "\t      double *activation_top = storage[2*j];\n",
+      "\t      double *activation_bottom = storage[2*j + 1];\n",
+      "\t      int j_p;\n",
+      "\t      for (j_p = 0;j_p< BYTE; j_p ++){ \n",
+      "            error1[m] = activation_top[m]*(1 - activation_top[m])*error1[j_p]*(x->theta[x->size -3].t[m][j_p+8]);\n",
+      "            error2[m] = activation_bottom[m]*(1 - activation_bottom[m])*error1[j_p]*(x->theta[x->size -3].t[m][j_p+16]);\n",
+      "\t      }\n",
+      "\t      for(j_p = 0 ; j_p <SIZE ; j_p++){\n",
+      "\t        x->theta[x->size - 5].t[m][j_p] += RATE*error1[m]*input_storage[x->length - 5][j_p];\n",
+      "\t        x->theta[x->size - 4].t[m][j_p] += RATE*error2[m]*input_storage[x->length - 4][j_p];\n",
+      "\t      }\n",
+      "\t    }\n",
+      "\t  } else if (x->layers[j+1] == 2){\n",
+      "        //for all other layers  \n",
+      "      \n",
+      "\t    int m;\n",
+      "\t    for(m = 0; m<BYTE; m++){\n",
+      "\t      double *activation_top = storage[2*j];\n",
+      "\t      double *activation_bottom = storage[2*j + 1];\n",
+      "\t      int j_p;\n",
+      "\t      for (j_p = 0;j_p< BYTE; j_p ++){ \n",
+      "\t\t    double sum1 = error1[j_p]*(x->theta[2*(j)].t[m][j_p+8]) + error2[j_p]*(x->theta[2*(j)].t[m][j_p+8]);\n",
+      "\t\t    double sum2 = error1[j_p]*(x->theta[2*(j)+1].t[m][j_p+16]) + error2[j_p]*(x->theta[2*(j)+1].t[m][j_p+16]);\n",
+      "\t\t    \n",
+      "            error1[m] = activation_top[m]*(1 - activation_top[m])*sum1;\n",
+      "\t\t    error2[m] = activation_bottom[m]*(1 - activation_bottom[m])*sum2;\n",
+      "\t      }\n",
+      "          for(j_p = 0 ; j_p <SIZE ; j_p++){\n",
+      "\t        x->theta[2*(j-1)].t[m][j_p] += RATE*error1[m]*input_storage[2*j][j_p];\n",
+      "\t        x->theta[2*(j-1) + 1].t[m][j_p] += RATE*error2[m]*input_storage[2*j + 1][j_p];\n",
+      "\t      }\n",
+      "\t    }\n",
+      "\t  } \n",
+      "    }\n",
+      "  }\t\t\t\t \t\t\t\t\t  \n",
+      "}\n",
+      "\n",
+      "```"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Couple of things to note in this algorithm. One is that I hard-wired the learning rate to be 0.5. In a future version of this program I will definately want to be able to adjust this parameter, so I will have to take this out of the function, and use it as a parameter inputed into the program. Another thing to note is that one of the parameters that one can adjust is the number of epochs. As I was saying earlier, generally we will want to have a small learnig rate and then repeat the learning over several examples. The number of repeated learning is usually called the number of epochs in the artificial neural network community. I do have to say, however, that my implentation is completely messed up right here, because we are not reiterating over many examples, but are instead reiterating over only one single example, which completely defeats the purpose of a small learning rate reiterated over many epochs. However, In the final piece of code that I will show for this paper, I"
      ]
     },
     {
