--- a/prob2/Homework 1.ipynb
+++ b/prob2/Homework 1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fd13589fd657dcc3828771894033498456cd183970b5b1552f777f19e679be4a"
+  "signature": "sha256:9717c9be5f0434ab44a99a76e078586a3e6ab0182498f18a11eccfe74991a112"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -426,6 +426,55 @@
       "(c) Determine the equation of the least squares region line and draw it on your graph. Does the line\n",
       "make sense to you intuitively?"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "hide()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<script>\n",
+        "code_show=true; \n",
+        "function code_toggle() {\n",
+        " if (code_show){\n",
+        " $('div.input').hide();\n",
+        " $('div.output_prompt').hide();\n",
+        "\n",
+        " } else {\n",
+        " $('div.input').show();\n",
+        " $('div.output_prompt').show();\n",
+        " }\n",
+        " code_show = !code_show\n",
+        "} \n",
+        "$( document ).ready(code_toggle);\n",
+        "</script>\n",
+        "<p>The raw code for this IPython notebook is by default hidden for easier reading.</p>\n",
+        "\n",
+        "<p>To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.</p>\n",
+        "\n"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "<IPython.core.display.HTML at 0xb0b3cb6c>"
+       ]
+      }
+     ],
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
