--- a/prob2/Homework 1.ipynb
+++ b/prob2/Homework 1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9717c9be5f0434ab44a99a76e078586a3e6ab0182498f18a11eccfe74991a112"
+  "signature": "sha256:91cd73c4ae7e7d56f238127157eb442fb4c2b6253c129a8d401afb64a128aa6f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -419,13 +419,46 @@
       "\n",
       "$$f_1(x) = \\int_x^1 8xy dx = 4x(1-x^2)$$\n",
       "\n",
-      "$$f_2(x) = \\int_0^1 8xy dy = 4y$$\n",
+      "$$f_2(y) = \\int_0^1 8xy dy = 4y^3$$\n",
       "\n",
       "(b) Compute $\\mu_X$ , $\\mu_Y$ , $\\sigma^2_X$ , $\\sigma^2_Y$ , Cov(X, Y), and \u03c1.\n",
+      "\n",
+      "$\\mu_X = \\int 4x^2 - 4x^4 ~dx = 4/3 - 4/5 = 8/15$\n",
+      "\n",
+      "$\\mu_Y = \\int 4y^4 ~dy = 4/5$\n",
+      "\n",
+      "$\\sigma^2_X = \\int 4x^3 - 4x^5 ~dx - (8/15)^2 = 1/3 - (8/15)^2 = .0489$ \n",
+      "\n",
+      "$\\sigma^2_Y = \\int 4y^5 ~dy - (4/5)^2 = .16$\n",
+      "\n",
+      "$Cov(X,Y) = \\mathbb{E}(XY) - \\mu_X \\mu_Y = \\int \\int 8x^2y^2 ~dxdy - 32/75 = \\int \\frac 8 3 (x^2-x^5) -32/75 = 8/18 - 32/75 = .0178$\n",
+      "\n",
+      "$\\rho = .017778/\\sqrt{.16*.0489} =  .201$\n",
+      "\n",
       "\n",
       "(c) Determine the equation of the least squares region line and draw it on your graph. Does the line\n",
       "make sense to you intuitively?"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(.2*.4/.22)*8/15"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 57,
+       "text": [
+        "0.19393939393939397"
+       ]
+      }
+     ],
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -460,13 +493,21 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 43,
+       "prompt_number": 44,
        "text": [
-        "<IPython.core.display.HTML at 0xb0b3cb6c>"
+        "<IPython.core.display.HTML at 0xb0a75f0c>"
        ]
       }
      ],
-     "prompt_number": 43
+     "prompt_number": 44
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
