more comments for the octave PLA implementation

--- a/ML/Octave Practice.ipynb
+++ b/ML/Octave Practice.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:18f526b23390d071b2622f5492681012dce3378c08aef9d9933d54c487a0c1db"
+  "signature": "sha256:0b0e0f5faf49bf6906c722ade958ceacc3a90749801685d25ccb51e2652649d2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -139,7 +139,8 @@
       "slope = 2;\n",
       "intercept = -1;\n",
       "\n",
-      "for i =1:10\n",
+      "for i =1:length(data)\n",
+      "    #looping over the data to classify every example as either +1 or -1\n",
       "    if slope*data(i,1) + intercept> data(i,2)\n",
       "        data(i,3) = 1;\n",
       "    else\n",
@@ -187,7 +188,14 @@
      "input": [
       "%%octave \n",
       "\n",
-      "function plot_perceptron (w) #https://www.gnu.org/software/octave/doc/interpreter/Defining-Functions.html\n",
+      "function plot_perceptron (w) \n",
+      "    #here's a function to plot the straight line defined by the perceptron weight w\n",
+      "    #the formula for a line is \n",
+      "    #w(1) + w(2)*x + w(3)*y = 0\n",
+      "    #I've rearranged the terms so that\n",
+      "    #y = -w(2)*x/w(3) - w(1)/w(3)\n",
+      "    #I also ended up googling how to make a function that doesn't have a return value:\n",
+      "    #https://www.gnu.org/software/octave/doc/interpreter/Defining-Functions.html\n",
       "    x = linspace(0,5,10);\n",
       "    slope = - w(2)/w(3);\n",
       "    intercept = - w(1)/w(3);\n",
@@ -196,12 +204,13 @@
       "\n",
       "\n",
       "function plot_data (data)\n",
+      "    #this function will make a scatter plot of the data\n",
       "    hold on;\n",
       "    for i =1:length(data)\n",
       "        if data(i,3) == 1\n",
-      "            scatter(data(i,1),data(i,2),20, 'r', 'filled')\n",
+      "            scatter(data(i,1),data(i,2),20, 'r', 'filled') #http://octave.sourceforge.net/octave/function/scatter.html\n",
       "        else\n",
-      "            scatter(data(i,1),data(i,2), 20, 'b', 'filled') #http://octave.sourceforge.net/octave/function/scatter.html\n",
+      "            scatter(data(i,1),data(i,2), 20, 'b', 'filled') \n",
       "        endif;            \n",
       "    end; \n",
       "    hold off;\n",
@@ -209,6 +218,8 @@
       "\n",
       "    \n",
       "function result = classify (w, x)\n",
+      "    #this function will classify any point x (x must be an x, y pair)\n",
+      "    #as either +1 or -1 based on the dot product of x and w\n",
       "    x = [1,x];\n",
       "    if dot(w,x)>0\n",
       "        result = 1;\n",
@@ -243,7 +254,7 @@
      "input": [
       "%%octave \n",
       "\n",
-      "w = randn(1,3); \n",
+      "w = randn(1,3); #random vector that is our initial perceptron weights \n",
       "plot_perceptron(w)\n",
       "plot_data(data)"
      ],
@@ -279,14 +290,21 @@
       "%%octave\n",
       "\n",
       "while true\n",
+      "    #basically the way this implementation works is by repeatedly looping through the data\n",
+      "    #and seeing if any points are missed classified\n",
+      "    #if no points are missed classified\n",
+      "    #then there will be no error, and the bottom piece of code will break us out of the while loop\n",
       "    error = false;\n",
       "    for i = 1:length(data)\n",
       "        if classify(w, data(i,1:2)) != data(i,3)\n",
+      "            #however, if there is a misclassified data point\n",
+      "            #then we will set the error to be true\n",
+      "            #and update the perceptron weights according to the formula found in the book\n",
       "            error = true;\n",
       "            w = w + data(i,3)*[1,data(i,1:2)];\n",
       "        endif;    \n",
       "    end;\n",
-      "    if error == false\n",
+      "    if error == false #here's the code that breaks us out of the while loop\n",
       "        break;\n",
       "    endif;    \n",
       "endwhile;\n",
