finished the prob homework

--- a/prob2/Homework 1.ipynb
+++ b/prob2/Homework 1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:91cd73c4ae7e7d56f238127157eb442fb4c2b6253c129a8d401afb64a128aa6f"
+  "signature": "sha256:d0470df16f7c41129a2da146f1d8a90fe3b9be60887be99b0a6fe2504923e63e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,7 +26,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -188,14 +188,14 @@
       "$$\\sigma^2_{Y|x} = \\mathbb{E}(Y^2|x) - [\\mathbb{E}(Y|x)]^2$$\n",
       "\n",
       "$$\\sigma^2_{Y|x} = \\begin{cases}\n",
-      "    3/4 + 4/4 = 7/4, & \\text{if $x = 1$}.\\\\\n",
-      "    1/4 + 12/4 = 13/4, & \\text{if $x = 2$}.\n",
+      "    3/4 + 4/4 -(5/4)^2 = 3/16, & \\text{if $x = 1$}.\\\\\n",
+      "    1/4 + 12/4 - (7/4)^2 = 3/16, & \\text{if $x = 2$}.\n",
       "  \\end{cases}\n",
       "$$\n",
       "\n",
       "$$\\sigma^2_{X|y} = \\begin{cases}\n",
-      "    3/4 + 4/4 = 7/4, & \\text{if $y = 1$}.\\\\\n",
-      "    1/4 + 12/4 = 13/4, & \\text{if $y = 2$}.\n",
+      "    3/4 + 4/4 - (5/4)^2 = 3/16, & \\text{if $y = 1$}.\\\\\n",
+      "    1/4 + 12/4 - (7/4)^2 = 3/16, & \\text{if $y = 2$}.\n",
       "  \\end{cases}\n",
       "$$"
      ]
@@ -372,7 +372,7 @@
       "\n",
       "(c) Find P(X \u2265 1/2, Y \u2265 1/2).\n",
       "\n",
-      "$$\\mathbb{P}(X \\ge 1/2 , Y \\ge 1/2) = \\mathbb{P}(1/4 \\le X^2 \\le Y) = \\int_{1/2}^{1} \\int_{1/2}^{\\sqrt y} \\frac 3 2 dy dx = (1-3/4) - (\\sqrt {1/8} - 3/8) = .271$$\n",
+      "$$\\mathbb{P}(X \\ge 1/2 , Y \\ge 1/2) = \\mathbb{P}(1/4 \\le X^2 \\le Y) = \\int_{1/2}^{1} \\int_{1/2}^{\\sqrt y} \\frac 3 2 dx dy = (1-3/4) - (\\sqrt {1/8} - 3/8) = .271$$\n",
       "\n",
       "(d) Are X and Y independent? Why or why not?\n",
       "\n",
@@ -429,7 +429,7 @@
       "\n",
       "$\\sigma^2_X = \\int 4x^3 - 4x^5 ~dx - (8/15)^2 = 1/3 - (8/15)^2 = .0489$ \n",
       "\n",
-      "$\\sigma^2_Y = \\int 4y^5 ~dy - (4/5)^2 = .16$\n",
+      "$\\sigma^2_Y = \\int 4y^5 ~dy - (4/5)^2 = .0267$\n",
       "\n",
       "$Cov(X,Y) = \\mathbb{E}(XY) - \\mu_X \\mu_Y = \\int \\int 8x^2y^2 ~dxdy - 32/75 = \\int \\frac 8 3 (x^2-x^5) -32/75 = 8/18 - 32/75 = .0178$\n",
       "\n",
@@ -437,28 +437,49 @@
       "\n",
       "\n",
       "(c) Determine the equation of the least squares region line and draw it on your graph. Does the line\n",
-      "make sense to you intuitively?"
+      "make sense to you intuitively?\n",
+      "\n",
+      "The least square regression line is defined as\n",
+      "\n",
+      "$y = \\mu_Y + \\rho \\frac {\\sigma_Y}{\\sigma_X} (x - \\mu_X)$\n",
+      "\n",
+      "We can plot this line:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "(.2*.4/.22)*8/15"
+      "def y(x):\n",
+      "    return 4/5 + .2*(.0267/.0489)*(x - 8/15)\n",
+      "\n",
+      "x = linspace(0,1,10)\n",
+      "plot(x,x)\n",
+      "plt.fill_between(x, x, 1, color='grey', alpha='0.5');\n",
+      "plot(x,y(x), color = 'red');"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 57,
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE8ZJREFUeJzt3W+MHPV9x/H33h9fMNzZOA42sQ98GAQmElmCgt1GaUiD\nFBJVtZRWRSStRIlknjhUIlUJIWpQqrQiVFUaUQElwNWtFB4keUAqYpQ0t6RCgYBi/rkG4aRItoms\nBMr57Jy5f9sHs3c7t7d3O7s3Nzt/3i/pxOztePzzyP744+/MDiBJkiRJkiRJkiRJkiRJkpRrjwAn\ngZdX2OdbwOvAi8DVSSxKkrQ6HyUI7OXC/dPAE7Xt3cAzSSxKkrR6O1g+3B8Abgy9fhXYstYLkiQt\nryeGY2wDjoVeHwe2x3BcSVKH4gh3gFLD62pMx5UkdaAvhmOcAIZDr7fXvrfIli1bqidPnozhp5Ok\nQvklcGm7PyiOcH8c2A88BuwB3iG4u2aRkydPMjY2FsNPl32jo6PcfPPN3V5GKngu6jwXdUU9F0eO\nDPCNb+xi+3Y4cOAcRkYGKJVKOzs5VpRw/w7wMWAzwWz9q0B/7b0HCe6U+TRwFDgD/GUnC5Gkopqa\ngkce2crBgyN87WuT7N+/gZ6exml3e6KE+00R9tm/qlVIUkGF2/qhQzAysjGW48YxllGbyuVyt5eQ\nGp6LOs9FXRHOxVq09bD4jtRa1Zm7JDWfrS+nVCpBB1ltc5ekhKx1Ww8z3CUpAWs1W1+O4S5JayjJ\nth5muEvSGkm6rYcZ7pIUs2619TDDXZJi1M22Hma4S1IM0tDWwwx3SVqltLT1MMNdkjqUtrYeZrhL\nUgfS2NbDDHdJakOa23qY4S5JEaW9rYcZ7pLUQlbaepjhLkkryFJbDzPcJamJLLb1MMNdkhpkta2H\nGe6SVJP1th5muEsS+WjrYYa7pELLU1sPM9wlFVbe2nqY4S6pcPLa1sMMd0mFkue2Hma4SyqEIrT1\nMMNdUu4Vpa2HGe6ScqtobT3McJeUS0Vs62GGu6RcyVRbn5yEt94Kvt5+e+n22293fGjDXVJudK2t\nT08vDuSVAju8Xa3Ce99b/9q0qb69ZQtceSU8+mhHS0ryr7Pq2NhYgj+dpKKIra3PzcE777Qf0pOT\ncP75SwO61fb69S2XVCqVoIOstrlLyrSmbb1ahYmJ5mOOlUJ6fBwGB5cP41276tvh94eGoJSu0Y/h\nLinVeqam6Bsfp//UKfonJha2S+9M8NrTs5z3q1l+fMVvuIRTlP4oFOLr1i0f0hdfDFdfvfh7mzYF\n7bsvH7GYj1+FpNQrzc7Sd+oU/adOLfy3/9Qp+iYm6K8Fdt/ERP37tf+W5uaYHhpiemiImcFBpjds\n4DdzG/npyyNUN23iT7+2hfddvmVpUA8MdPuX3FWGu6T2zM3Rd+ZMEMDj4/TXAnlRYDeG96lT9Jw9\ny8zgYBDQ82Fd++/00BDvbtkSbA8OMrNhA9O1/ebe856Fkcei2frfpfxOmC4z3KWiqlbpnZysB3Fo\n5NE/MRF8vxbefbXv9Y+P03f6NDPr1y8Ec2NY/254eElwzwwNMbN+PfT0dLzcot+33q4o4X4D8E2g\nF/g2cE/D+5uB/wC21o73j8BofEuU1ErP1NTyzbmhQfePjwfbExNUe3sXjzyGhpjesIGZwUHefd/7\nOL1z59KQHhyk2tub2K8tU/etp0ircO8F7gOuB04AzwGPA0dC++wHDgF3EgT9awRhPxP3YqW8K83M\nLARvpJFHrVGXZmaatuXp2ox6cnh4YcwxP/KYGRpibt26bv+SV2Rb71yrcL8WOAq8UXv9GLCXxeH+\na+Cq2vYQ8BYGu4quNpduGsrNRh61r97JSWbOO4/pUACHw/r0zp31mXRoPj0bmkvngW199VqF+zbg\nWOj1cWB3wz4PAT8B3gQGgT+LbXVSt1Wr9J4929aFw/k2PXvOOU1n0tNDQ0xu28bErl2LLyAODTFz\n7rmrmkvngW09Hq3CvRrhGF8GXgCuA3YCPwI+CEw07jg6OrqwXS6XKZfLEZcprd7CXLrZhcMVRh7V\nnp5Ft+GFA3tq82bOXHLJ0pHI4CDVnNwvnRTbeqBSqVCpVFZ9nFZnbg9wN8FFVQjm6nMsvqj6BPB1\n4Ona6/8C7gCebziWjx9QLEqzs/StFMrz90037FOanl52Jr2w3WRuPVfw+6WTEG7rBw6cw8iI53ze\nWj1+4HngMmAHwdjlRuCmhn1eJbjg+jSwBbgc+FW7C1EBVavBXLqNkUf/+Hh9Lr3MyOPMjh1LZtLT\ng4PMrl+fq7l0HtjW106rcJ8huBvmSYI7Zx4muJh6a+39B4G/Bx4FXgR6gL8BOn9OpbKnWqXn7Nl6\nQEe8y6Pv9GnmBgaWHXlMvv/9TFxxxdI2fe65kOCteFobztbXlk+F1CKl6emld3ZEmE9XS6WlI4/G\n8UfoNrz57zuXLh7bent8KqQWm52l//Tp5T/MssyzPHqmppZcGFx0l8eFFzYNcefSimK+rW/bBr/4\nBVxyiW19rRjuaVet0nvmTOuRR0Ng9505w8y55y7bohfm0g3h7Vxaa8G2njzDPUHzc+lmjy9tOvKo\nfW9uYGDZhy2dvfBCJi6/fOkHW847z7m0UiE8W7etJ8dw70BpZqb1bXhNRh6lanXJRcP5sJ46/3zO\nXHxx05Zd7e/v9i9ZapttvbuKHe6zswuPLm15G978w5ZOnaLn3Xfrs+gmd3ksPLq0oWXPDQw48lAh\nHD68jnvvvZLhYdt6t+Qj3GuPLl0yk17plryJiSWPLm18Mt7vLrqoaUjPrvLRpVJe2dbTI3Xh3vPu\nu9GfLx1q1tW+vmU/eXj2gguYvvTSrj+6VMoz23q6JBruW3/4w+Yz6dDIY/5/qdX0AuL8o0sbPnmY\nhUeXSnllW0+nRMN94wsv1B9desEFTW/Ty9ujS6U8s62nl59QldQ223py/ISqpETY1rPBcJcUiW09\nWwx3SS3Z1rPHcJe0LNt6dhnukpo6cmSAe+7ZZVvPKMNd0iK29Xww3CUtsK3nh+EuybaeQ4a7VHDe\nCZNPhrtUULb1fDPcpQIKt/VDh2BkxLaeN4a7VCC29eIw3KWCsK0Xi+Eu5ZxtvZgMdynHbOvFZbhL\nOWRbl+Eu5YxtXWC4S7lhW1eY4S7lgG1djQx3KcNs61qO4S5llG1dKzHcpYyxrSsKw13KENu6ojLc\npQywratdhruUcrZ1daInwj43AK8CrwN3LLPPdcAh4BWgEsfCpKKbmoIHHtjKXXddw+23w1NPbWBk\nZKDby1JGtGruvcB9wPXACeA54HHgSGifjcC/AJ8EjgOb41+mVCy2da1Wq3C/FjgKvFF7/Riwl8Xh\n/lngewTBDvDbGNcnFYqzdcWlVbhvA46FXh8HdjfscxnQD4wBg8A/A/8e1wKlorCtK06twr0a4Rj9\nwIeATwDrgZ8BzxDM6CW1YFvXWmgV7ieA4dDrYerjl3nHCEYxk7WvnwIfpEm4j46OLmyXy2XK5XLb\nC5byxLauRpVKhUqlsurjtKoHfcBrBK38TeDnwE0snrlfQXDR9ZPAAPAscCPwPw3Hqo6Nja16wVIe\n2NYVValUgtZZvUSr5j4D7AeeJLhz5mGCYL+19v6DBLdJHgReAuaAh1ga7JJqbOtKQpJVweauQrOt\nqxNr1dwlxcC2rqQZ7tIasq2rWwx3aY3Y1tVNhrsUM9u60sBwl2JkW1daGO5SDGzrShvDXVol27rS\nyHCXOmRbV5oZ7lIHbOtKO8NdaoNtXVlhuEsR2daVJYa71IJtXVlkuEsrsK0rqwx3qQnburLOcJca\n2NaVB4a7VGNbV54Y7hK2deWP4a5Cs60rrwx3FZZtXXlmuKtwbOsqAsNdhWJbV1EY7ioE27qKxnBX\n7tnWVUSGu3LLtq4iM9yVS7Z1FZ3hrlyxrUsBw125YVuX6gx3ZZ5tXVrKcFem2dal5gx3ZZJtXVqZ\n4a7Msa1LrRnuygzbuhSd4a5MsK1L7THclWq2dakzhrtSy7Yudc5wV+rY1qXV64mwzw3Aq8DrwB0r\n7PdhYAb4TAzrUkEdPryOffvKnDixlUOH4LbbNhrsUgdaNfde4D7geuAE8BzwOHCkyX73AAcB/ySq\nbbZ1KV6twv1a4CjwRu31Y8Belob7F4DvErR3qS3O1qX4tQr3bcCx0OvjwO4m++wF/pAg3KuxrU65\nZluX1k6rcI8S1N8EvlTbt4RjGUVgW5fWVqtwPwEMh14PE7T3sGsIxjUAm4FPAdMEs/lFRkdHF7bL\n5TLlcrm91SrzbOvSyiqVCpVKZdXHafWnqg94DfgE8Cbwc+Amls7c5z0K/AD4fpP3qmNjYx0uU3kQ\nbusHDpzDyMhAt5ckpV6pVIIOJiKtmvsMsB94kuCOmIcJgv3W2vsPtvsTqnhs61LykvwTZnMvINu6\ntDpr1dyljtjWpe4y3BU774SRus9wV2xs61J6GO6KhW1dShfDXatiW5fSyXBXx2zrUnoZ7mqbbV1K\nP8NdbbGtS9lguCsS27qULYa7WrKtS9ljuGtZtnUpuwx3NWVbl7LNcNcitnUpHwx3LbCtS/lhuMu2\nLuWQ4V5wtnUpnwz3grKtS/lmuBeQbV3KP8O9QGzrUnEY7gVhW5eKxXDPOdu6VEyGe47Z1qXiMtxz\nyLYuyXDPGdu6JDDcc8O2LinMcM8B27qkRoZ7htnWJS3HcM8o27qklRjuGTM1BQ8/fCFPPrnDti5p\nWYZ7hrzyyjruvfcDXHRR1bYuaUWGewbY1iW1y3BPOdu6pE4Y7illW5e0GoZ7CtnWJa2W4Z4itnVJ\ncTHcU8K2LilOPRH3uwF4FXgduKPJ+58DXgReAp4GropldQUwNQX3338hX/nKNXzxi1WeemoDIyMD\n3V6WpIyL0tx7gfuA64ETwHPA48CR0D6/Av4AGCf4i+BfgT2xrjSHbOuS1kqUcL8WOAq8UXv9GLCX\nxeH+s9D2s8D2OBaXV87WJa21KOG+DTgWen0c2L3C/p8HnljNovLMti4pCVHCvdrG8T4O3AJ8pNmb\no6OjC9vlcplyudzGobPNti4pikqlQqVSWfVxoqTLHuBuglk6wJ3AHHBPw35XAd+v7Xe0yXGqY2Nj\nna0y48Jt/cCBc7xgKimyUqkE0bJ6kSjN/XngMmAH8CZwI3BTwz4XEQT7n9M82AvJti6pW6KE+wyw\nH3iS4M6Zhwkupt5ae/9B4G+B84H7a9+bJrgQW1jO1iV1U5I1shBjGdu6pDit5VhGEdnWJaWF4R4D\n27qktDHcV8m2LimNDPcO2dYlpZnh3gHbuqS0M9zbYFuXlBWGe0SHD6/j3nuvZHgY27qk1DPcW5ia\ngkce2crBgyO2dUmZYbivwLYuKasM9yZs65KyznBvYFuXlAeGe41tXVKeGO7Y1iXlT6HD3bYuKa8K\nG+62dUl5Vrhwt61LKoJChbttXVJRFCLcbeuSiib34W5bl1REuQ1327qkIstluNvWJRVdrsLdti5J\ngdyEu21dkuoyH+62dUlaKtPhbluXpOYyGe62dUlaWebC3bYuSa1lJtxt65IUXSbC3bYuSe1Jdbjb\n1iWpM6kNd9u6JHUudeFuW5ek1UtVuNvWJSkeqQh327okxavr4W5bl6T49UTY5wbgVeB14I5l9vlW\n7f0Xgauj/MRTU/DAA1u5665ruP12eOqpDYyMDET5oZKkFlqFey9wH0HAXwncBOxq2OfTwKXAZcA+\n4P5WP+nhw+vYt6/MiRNbOXQIbrttY6HGMJVKpdtLSA3PRZ3nos5zsXqtwv1a4CjwBjANPAbsbdjn\nj4F/q20/C2wEtjQ7mG094G/cOs9FneeiznOxeq1m7tuAY6HXx4HdEfbZDpxsPNi+fWVn65KUgFbN\nvRrxOI0zlaY/rshtXZKS1GrQvQe4m2DmDnAnMAfcE9rnAaBCMLKB4OLrx1ja3I8COztfqiQV0i8J\nrmvGqq924B3AOuAFml9QfaK2vQd4Ju5FSJLi9yngNYLmfWfte7fWvubdV3v/ReBDia5OkiRJUmfW\n5ENPGdXqXHyO4By8BDwNXJXc0hIX5fcFwIeBGeAzSSyqC6Kch+uAQ8ArBNez8qrVudgMHCQYB78C\n3JzYypL3CMF1ypdX2KerudlLMJ7ZAfTTeka/m/zO6KOci98DNtS2b6DY52J+v58A/wn8SVKLS1CU\n87AROExwOzEEAZdHUc7F3cA/1LY3A2+RgkemrJGPEgT2cuHedm5GefxAO2L90FPGRTkXPwPGa9vP\nUv8DnTdRzgXAF4DvAr9JbGXJinIePgt8j+DzIgC/TWpxCYtyLn4NDNW2hwjCfSah9SXtv4H/W+H9\ntnMz7nBv9oGmbRH2yWOoRTkXYZ+n/jdz3kT9fbGX+uMron7GIkuinIfLgE3AGPA88BfJLC1xUc7F\nQ8AHgDcJRhF/lczSUqnt3Iz7nzixfugp49r5NX0cuAX4yBqtpduinItvAl+q7Vui9WcwsijKeegn\nuOPsE8B6gn/dPUMwa82TKOfiywTjmusIPiPzI+CDwMTaLSvV2srNuMP9BDAcej1M/Z+Xy+2zvfa9\nvIlyLiC4iPoQwcx9pX+WZVmUc3EN9Q/CbSa4BXcaeHzNV5ecKOfhGMEoZrL29VOCQMtbuEc5F78P\nfL22/Uvgf4HLCf5FUzRdz00/9FQX5VxcRDB33JPoypIX5VyEPUo+75aJch6uAH5McMFxPcEFtiuT\nW2JiopyLfwK+WtveQhD+mxJaXzfsINoF1a7lph96qmt1Lr5NcJHoUO3r50kvMEFRfl/My2u4Q7Tz\n8NcEd8y8DNyW6OqS1epcbAZ+QJATLxNcbM6r7xBcW5gi+NfbLRQ3NyVJkiRJkiRJkiRJkiRJkiRJ\nkiRlwf8DKEKuxBUYX9oAAAAASUVORK5CYII=\n",
        "text": [
-        "0.19393939393939397"
+        "<matplotlib.figure.Figure at 0xb0a9aa2c>"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "It certainly doesn't look right...\n",
+      "\n",
+      "However, with so many pieces involved (9 seperate calculations) , it would not surprise me at all if I made some small error.\n"
+     ]
     },
     {
      "cell_type": "code",
@@ -493,21 +514,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 44,
+       "prompt_number": 7,
        "text": [
-        "<IPython.core.display.HTML at 0xb0a75f0c>"
+        "<IPython.core.display.HTML at 0xb0a7e52c>"
        ]
       }
      ],
-     "prompt_number": 44
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
