started work with R

--- a/ML/Octave Practice.ipynb
+++ b/ML/Octave Practice.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0b0e0f5faf49bf6906c722ade958ceacc3a90749801685d25ccb51e2652649d2"
+  "signature": "sha256:c1d99c0f96c364ba5bce6fb5480f66966b444b2723ac094a5e1008b64575ca85"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -310,7 +310,7 @@
       "endwhile;\n",
       "\n",
       "plot_perceptron(w)\n",
-      "plot_data(data)\n"
+      "plot_data(data)"
      ],
      "language": "python",
      "metadata": {},
