--- a/prob2/Homework 2.ipynb
+++ b/prob2/Homework 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c2992a19a0c6154a2234db1a7ad1c9cdd10217f214f8b48ca1171c9b80410ea8"
+  "signature": "sha256:c5a2d5a974a6a319f91dcec654d0327de5972aae72bdae978d6581f89564928e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -82,11 +82,11 @@
       "\n",
       "(d) Find P(18.5 < Y < 25.5 | X = 23).\n",
       "\n",
-      "$$\\mathbb{P}(18.5 < Y < 25.5 | X = 23) = \\mathbb{P}(\\frac {18.5 - 22.895}{4.7971} < Z < \\frac {25.5 - 22.895}{4.971})= 0.526661$$\n",
+      "$$\\mathbb{P}(18.5 < Y < 25.5 | X = 23) = \\mathbb{P}(\\frac {18.5 - 22.895}{\\sqrt{4.7971}} < Z < \\frac {25.5 - 22.895}{\\sqrt{4.7971}})= 0.86046$$\n",
       "\n",
       "(e) Find P(18.5 < Y < 25.5 | X = 25).\n",
       "\n",
-      "$$\\mathbb{P}(18.5 < Y < 25.5 | X = 25) = \\mathbb{P}(\\frac {18.5 - 24.195}{4.7971} < Z < \\frac {25.5 - 24.195}{4.971})= 0.4896249$$\n",
+      "$$\\mathbb{P}(18.5 < Y < 25.5 | X = 25) = \\mathbb{P}(\\frac {18.5 - 24.195}{\\sqrt{4.7971}} < Z < \\frac {25.5 - 24.195}{\\sqrt{4.7971}})= 0.719696$$\n",
       "\n",
       "(f) For x = 21, 23, and 25, draw a graph of z = h(y | x)\n",
       "similar to Figure 4.5-1."
