still fixing stuff

--- a/prob2/Homework 2.ipynb
+++ b/prob2/Homework 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c5a2d5a974a6a319f91dcec654d0327de5972aae72bdae978d6581f89564928e"
+  "signature": "sha256:f841ee0488c81f05e57c0f32dedd5930b51b3e05c019e29daa59f70f09fb8b77"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -151,7 +151,7 @@
       "are each normal. Note that X and Y can each be normal,\n",
       "but their joint pdf is not bivariate normal.\n",
       "\n",
-      "To show that it is a joint pdf we must only show that the integration over the domain is equal to one (positivity and less than or equal to one are obvious by inspection). To show that the integral is one, we first split the integrand into two parts:\n",
+      "To show that it is a joint pdf we will first show that the integration over the domain is equal to one. We first split the integrand into two parts:\n",
       "\n",
       "$$f(x,y) = \\left(\\frac 1 {2 \\pi} \\right)e^{ \u2212(x^2 +y^2 )/2} + \\left(\\frac 1 {2 \\pi} \\right)xye^{ \u2212(x^2 +y^2 \u22121)}$$\n",
       "\n",
@@ -159,7 +159,17 @@
       "\n",
       "$$\\int \\frac 1 {\\sqrt{2\\pi}} e^{ \u2212x^2/2} = 1$$ \n",
       "\n",
-      "Using the two facts above, it is obvious that\n",
+      "Next, we must show that the probability is positive. To do this, it is enough to look at the minimum value of this function:\n",
+      "\n",
+      "$$1+ xe^{-x^2/2}$$\n",
+      "\n",
+      "Taking the derivative and setting it to zero, yields:\n",
+      "\n",
+      "$$0 = e^{-x^2/2} - x^2e^{-x^2/2}$$\n",
+      "\n",
+      "which gives us a minimum at negative one. Plugging that in to the equation above yields a positive quantity. Showing that the probability is always less than one should be obvious both from inspection and because of the fact that the integral over the whole domain is equal to one.\n",
+      "\n",
+      "Finding the marginal pdfs is straightforward. Using the facts above, it is obvious that\n",
       "\n",
       "$$f_1(x) = \\frac 1 {\\sqrt{2\\pi}} e^{ \u2212x^2/2} $$\n",
       "\n",
