--- a/prob2/Homework 2.ipynb
+++ b/prob2/Homework 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f841ee0488c81f05e57c0f32dedd5930b51b3e05c019e29daa59f70f09fb8b77"
+  "signature": "sha256:5a86bc8c9539ca13f7bf54b99116c1532ae223e6793455fd1af1a6d996ee40f0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -253,9 +253,24 @@
       "\n",
       "Find the pdf of $Y = X^2$\n",
       "\n",
-      "$G(y) = \\mathbb{P}(Y \\leq y) = \\mathbb{P}(X^2 \\leq y) = \\mathbb{P}(X \\leq \\sqrt{y})= \\int_{-1}^{\\sqrt{Y}} \\frac {dx}{4}$\n",
+      "$$G(y) = \\mathbb{P}(Y \\leq y) = \\mathbb{P}(X^2 \\leq y) = \\mathbb{P}(-\\sqrt{y} \\leq X \\leq \\sqrt{y})$$\n",
       "\n",
-      "$G(y)???$ \n",
+      "We will split this problem into two parts. One part from (-1, 1) and the other part from (1, 3):\n",
+      "\n",
+      "$$G(y) = \\int_{-\\sqrt{y}}^{\\sqrt{y}} \\frac {dx}{4} + \\int_{1}^{\\sqrt{y}} \\frac {dx}{4} $$\n",
+      "\n",
+      "$$G(y) = \\begin{cases}\n",
+      "    \\frac {y} 2, & \\text{if $y \\in (0,1)$}.\\\\\n",
+      "    \\frac {y} 4 - \\frac 1 4, & \\text{if $y \\in (1,9)$}.\n",
+      "  \\end{cases}$$\n",
+      "\n",
+      "Taking the derivative yields:\n",
+      "\n",
+      "$$g(y) = \\begin{cases}\n",
+      "    \\frac 1 {4 \\sqrt{y}}, & \\text{if $y \\in (0,1)$}.\\\\\n",
+      "    \\frac 1 {8 \\sqrt{y}}, & \\text{if $y \\in (1,9)$}.\\\\\n",
+      "    0, & \\text{otherwise.}\n",
+      "  \\end{cases}$$\n",
       "\n"
      ]
     },
